# engine

./: .clang-format  CMakeLists.txt
assets/: CMakeLists.txt  hex_converter.py
audio/: audio.cpp  audio.hpp  chunk.cpp  chunk.hpp  initialize.cpp  initialize.hpp  music.cpp  music.hpp  wave.cpp  wave.hpp
common/: initialize.cpp  initialize.hpp
examples/: example.proto  message.cpp  message.hpp  music_test.cpp  sprite_test.cpp  sprite_test.rc  test_client.cpp  test_model.cpp  test_server.cpp
graphics/: image.cpp  image.hpp
networking/: client.cpp  client.hpp  initialize.cpp  initialize.hpp  primitives.hpp  server.cpp  server.hpp  transmit.cpp  transmit.hpp
opengl/: box.cpp  box.frag  box.hpp  box.vert  boxrenderer.cpp  boxrenderer.hpp  buffer.cpp  buffer.hpp  destination.cpp  destination.frag  destination.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  model.cpp  model.frag  model.h  model.vert  program.cpp  program.hpp  renderbuffer.cpp  renderbuffer.hpp  screen.cpp  screen.hpp  shader.cpp  shader.hpp  sprite.frag  spritemap.cpp  spritemap.hpp  spriterenderer.cpp  spriterenderer.hpp  texture.cpp  texture.hpp  vertexarray.cpp  vertexarray.hpp
sdl/: controller.cpp  controller.hpp  initialize.cpp  initialize.hpp  keyboard.cpp  keyboard.hpp  openglwindow.cpp  openglwindow.hpp  scene.cpp  scene.hpp  surface.cpp  surface.hpp  window.cpp  window.hpp
